src/test/deca/context/invalid/superclass_not_defined.deca
//ERROR :2
class A extends B{

}